--- a/src/freshbot/registry/agent_tools.yaml
+++ b/src/freshbot/registry/agent_tools.yaml
@@ -45,3 +45,24 @@ agent_tools:
 - agent: freshbot-custom-agent
   tool: tool_qwen_chat
   overrides: {}
+- agent: freshbot-base-agent
+  tool: tool_kb_search
+  overrides:
+    limit: 5
+- agent: freshbot-thinking-agent
+  tool: tool_kb_search
+  overrides:
+    limit: 6
+- agent: freshbot-thinking-agent
+  tool: tool_registry_snapshot
+  overrides: {}
+- agent: freshbot-deep-thinking
+  tool: tool_kb_search
+  overrides:
+    limit: 8
+- agent: freshbot-deep-thinking
+  tool: tool_code_embed
+  overrides: {}
+- agent: freshbot-deep-thinking
+  tool: tool_search_tools
+  overrides: {}
