feat: add codex project tooling and docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "httpx>=0.28.0",
     "pyyaml>=6.0",
     "fastmcp>=2.12.3",
+    "neo4j>=5.18.0",
 ]
 
 [project.optional-dependencies]
