--- a/src/freshbot/flows/flows.yaml
+++ b/src/freshbot/flows/flows.yaml
@@ -17,7 +17,39 @@ flows:
   tags:
   - freshbot
   - ingestion
-  description: Freshbot ingestion pipeline wrapping legacy document flow.
+  description: Orchestrates the modular ingestion pipeline and writes results to the KB.
+- callable: freshbot.flows.ingest.pipeline:ingest_pipeline_flow
+  name: freshbot-ingest-pipeline
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - ingestion
+  description: Lego-style ingestion pipeline that assembles step flows.
+- callable: freshbot.flows.ingest.wrappers:ingest_general_flow
+  name: freshbot-ingest-general
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - ingestion
+  description: General-domain ingestion wrapper pointing at the KB tables.
+- callable: freshbot.flows.ingest.wrappers:ingest_code_flow
+  name: freshbot-ingest-code
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - ingestion
+  description: Code-domain ingestion wrapper using ctags chunking.
+- callable: freshbot.flows.ingest.wrappers:ingest_law_flow
+  name: freshbot-ingest-law
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - ingestion
+  description: Legal-domain ingestion wrapper with Docling normalisation.
 - callable: freshbot.flows.tools:qwen_chat_tool
   name: freshbot-tool-qwen-chat
   work_queue: freshbot-default
@@ -74,6 +106,41 @@ flows:
   - freshbot
   - tool
   description: Snapshot of registry tables for debugging.
+- callable: freshbot.flows.tools:prefect_flow_catalog_tool
+  name: freshbot-tool-prefect-catalog
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - tool
+  - prefect
+  description: Enumerate Prefect deployments and usage instructions.
+- callable: freshbot.flows.tools:tool_manifest_fetch_tool
+  name: freshbot-tool-manifest-fetch
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - tool
+  description: Fetch cfg.tools metadata and linked documentation.
+- callable: freshbot.flows.tools:agent_catalog_tool
+  name: freshbot-tool-agent-catalog
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - tool
+  - agents
+  description: Summarise registered agents, thinking modes, and tool bindings.
+- callable: freshbot.flows.tools:graph_capabilities_map_tool
+  name: freshbot-tool-graph-map
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - tool
+  - neo4j
+  description: Surface tool and agent relationships captured in Neo4j.
 - callable: freshbot.flows.metadata:metadata_flag_flow
   name: freshbot-metadata-flag
   work_queue: freshbot-default
@@ -82,6 +149,17 @@ flows:
   - freshbot
   - metadata
   description: Stub handler for entry metadata flags.
+- callable: freshbot.flows.tasks.sync_task_graph_to_neo4j_flow
+  name: freshbot-task-graph-sync
+  work_queue: freshbot-default
+  work_pool: freshbot-process
+  tags:
+  - freshbot
+  - tasks
+  - neo4j
+  description: Mirrors task/project metadata into Neo4j for graph analytics.
+  parameters:
+    purge_existing: true
 - callable: freshbot.flows.agents:planner_agent_flow
   name: freshbot-agent-planner
   work_queue: freshbot-default
